; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/usb/musb/extr_blackfin.c_blackfin_interrupt.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/usb/musb/extr_blackfin.c_blackfin_interrupt.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.musb = type { i32, i8*, i32, i8*, i64 }

@IRQ_NONE = common dso_local global i64 0, align 8
@MUSB_INTRUSB = common dso_local global i32 0, align 4
@MUSB_INTRTX = common dso_local global i32 0, align 4
@MUSB_INTRRX = common dso_local global i32 0, align 4
@IRQ_HANDLED = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [11 x i8] c"spurious?\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (i32, i8*)* @blackfin_interrupt to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @blackfin_interrupt(i32 %0, i8* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i64, align 8
  %7 = alloca %struct.musb*, align 8
  store i32 %0, i32* %3, align 4
  store i8* %1, i8** %4, align 8
  %8 = load i64, i64* @IRQ_NONE, align 8
  store i64 %8, i64* %6, align 8
  %9 = load i8*, i8** %4, align 8
  %10 = bitcast i8* %9 to %struct.musb*
  store %struct.musb* %10, %struct.musb** %7, align 8
  %11 = load %struct.musb*, %struct.musb** %7, align 8
  %12 = getelementptr inbounds %struct.musb, %struct.musb* %11, i32 0, i32 0
  %13 = load i64, i64* %5, align 8
  %14 = call i32 @spin_lock_irqsave(i32* %12, i64 %13)
  %15 = load %struct.musb*, %struct.musb** %7, align 8
  %16 = getelementptr inbounds %struct.musb, %struct.musb* %15, i32 0, i32 2
  %17 = load i32, i32* %16, align 8
  %18 = load i32, i32* @MUSB_INTRUSB, align 4
  %19 = call i64 @musb_readb(i32 %17, i32 %18)
  %20 = load %struct.musb*, %struct.musb** %7, align 8
  %21 = getelementptr inbounds %struct.musb, %struct.musb* %20, i32 0, i32 4
  store i64 %19, i64* %21, align 8
  %22 = load %struct.musb*, %struct.musb** %7, align 8
  %23 = getelementptr inbounds %struct.musb, %struct.musb* %22, i32 0, i32 2
  %24 = load i32, i32* %23, align 8
  %25 = load i32, i32* @MUSB_INTRTX, align 4
  %26 = call i8* @musb_readw(i32 %24, i32 %25)
  %27 = load %struct.musb*, %struct.musb** %7, align 8
  %28 = getelementptr inbounds %struct.musb, %struct.musb* %27, i32 0, i32 3
  store i8* %26, i8** %28, align 8
  %29 = load %struct.musb*, %struct.musb** %7, align 8
  %30 = getelementptr inbounds %struct.musb, %struct.musb* %29, i32 0, i32 2
  %31 = load i32, i32* %30, align 8
  %32 = load i32, i32* @MUSB_INTRRX, align 4
  %33 = call i8* @musb_readw(i32 %31, i32 %32)
  %34 = load %struct.musb*, %struct.musb** %7, align 8
  %35 = getelementptr inbounds %struct.musb, %struct.musb* %34, i32 0, i32 1
  store i8* %33, i8** %35, align 8
  %36 = load %struct.musb*, %struct.musb** %7, align 8
  %37 = getelementptr inbounds %struct.musb, %struct.musb* %36, i32 0, i32 4
  %38 = load i64, i64* %37, align 8
  %39 = icmp ne i64 %38, 0
  br i1 %39, label %50, label %40

40:                                               ; preds = %2
  %41 = load %struct.musb*, %struct.musb** %7, align 8
  %42 = getelementptr inbounds %struct.musb, %struct.musb* %41, i32 0, i32 3
  %43 = load i8*, i8** %42, align 8
  %44 = icmp ne i8* %43, null
  br i1 %44, label %50, label %45

45:                                               ; preds = %40
  %46 = load %struct.musb*, %struct.musb** %7, align 8
  %47 = getelementptr inbounds %struct.musb, %struct.musb* %46, i32 0, i32 1
  %48 = load i8*, i8** %47, align 8
  %49 = icmp ne i8* %48, null
  br i1 %49, label %50, label %77

50:                                               ; preds = %45, %40, %2
  %51 = load %struct.musb*, %struct.musb** %7, align 8
  %52 = getelementptr inbounds %struct.musb, %struct.musb* %51, i32 0, i32 2
  %53 = load i32, i32* %52, align 8
  %54 = load i32, i32* @MUSB_INTRUSB, align 4
  %55 = load %struct.musb*, %struct.musb** %7, align 8
  %56 = getelementptr inbounds %struct.musb, %struct.musb* %55, i32 0, i32 4
  %57 = load i64, i64* %56, align 8
  %58 = call i32 @musb_writeb(i32 %53, i32 %54, i64 %57)
  %59 = load %struct.musb*, %struct.musb** %7, align 8
  %60 = getelementptr inbounds %struct.musb, %struct.musb* %59, i32 0, i32 2
  %61 = load i32, i32* %60, align 8
  %62 = load i32, i32* @MUSB_INTRTX, align 4
  %63 = load %struct.musb*, %struct.musb** %7, align 8
  %64 = getelementptr inbounds %struct.musb, %struct.musb* %63, i32 0, i32 3
  %65 = load i8*, i8** %64, align 8
  %66 = call i32 @musb_writew(i32 %61, i32 %62, i8* %65)
  %67 = load %struct.musb*, %struct.musb** %7, align 8
  %68 = getelementptr inbounds %struct.musb, %struct.musb* %67, i32 0, i32 2
  %69 = load i32, i32* %68, align 8
  %70 = load i32, i32* @MUSB_INTRRX, align 4
  %71 = load %struct.musb*, %struct.musb** %7, align 8
  %72 = getelementptr inbounds %struct.musb, %struct.musb* %71, i32 0, i32 1
  %73 = load i8*, i8** %72, align 8
  %74 = call i32 @musb_writew(i32 %69, i32 %70, i8* %73)
  %75 = load %struct.musb*, %struct.musb** %7, align 8
  %76 = call i64 @musb_interrupt(%struct.musb* %75)
  store i64 %76, i64* %6, align 8
  br label %77

77:                                               ; preds = %50, %45
  %78 = load %struct.musb*, %struct.musb** %7, align 8
  %79 = getelementptr inbounds %struct.musb, %struct.musb* %78, i32 0, i32 0
  %80 = load i64, i64* %5, align 8
  %81 = call i32 @spin_unlock_irqrestore(i32* %79, i64 %80)
  %82 = load i64, i64* %6, align 8
  %83 = load i64, i64* @IRQ_HANDLED, align 8
  %84 = icmp ne i64 %82, %83
  br i1 %84, label %85, label %87

85:                                               ; preds = %77
  %86 = call i32 @DBG(i32 5, i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str, i64 0, i64 0))
  br label %87

87:                                               ; preds = %85, %77
  %88 = load i64, i64* @IRQ_HANDLED, align 8
  ret i64 %88
}

declare dso_local i32 @spin_lock_irqsave(i32*, i64) #1

declare dso_local i64 @musb_readb(i32, i32) #1

declare dso_local i8* @musb_readw(i32, i32) #1

declare dso_local i32 @musb_writeb(i32, i32, i64) #1

declare dso_local i32 @musb_writew(i32, i32, i8*) #1

declare dso_local i64 @musb_interrupt(%struct.musb*) #1

declare dso_local i32 @spin_unlock_irqrestore(i32*, i64) #1

declare dso_local i32 @DBG(i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
